# bupt_rc_cv_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: CVCamera.msg  CVCameraArray.msg  CVCameras.msg  CVFrame.msg  CVInference.msg  CVInferenceArray.msg  CVInferenceResult.msg  CVTracker.msg
srv/: CVDepth.srv  CVInferenceSendImg.srv  CVInferenceSwitch.srv  CVSelTrack.srv
